# GeneIndex

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: run_shard.py  types.md  types.py
src/m0_ae/: dataset.py  decoder.py  encoder.py  get_data_for_dataset.ipynb  get_data_for_dataset.py  train.py  train_model_exp.ipynb  transformer.py
src/m1_record_splitter/: dataset.py  get_data_for_dataset.py  train_model.ipynb  use_model.ipynb  utils.py  vgg_annotator_save.json
src/m1_record_splitter/dataset/ds3_al1/: 0_ds3_al_save.json
src/m1_row_splitter/: get_data_for_dataset.py  train_model.ipynb
src/m1_row_splitter/dataset/ds1_births/: 0_labels.json
src/m1_row_splitter/dataset/ds3_al1/: 0_labels.json
src/notebooks/: get_data_for_dataset.ipynb  images_ai.ipynb  images_prepare.ipynb  remove_duplicates_from_dataset.ipynb
src/u1_downloader/: general_downloader.py  images_downloader.py  images_loader.py  labs_downloader.py  labs_tools.py
src/u2_image_record_splitter_alg/: __init__.py  record_splitter.py
src/u2_image_row_splitter/: __init__.py  images_fext_dino.py
