[project]
name = "GeneIndex"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "albumentations>=2.0.8",
    "beautifulsoup4>=4.14.3",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "label-studio>=1.23.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "requests[socks]==2.32.3",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "stem>=1.8.2",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
